# minuet

./: merged-exercises.json
data/definitions/: chords-root-position-definitions.json  intervals-ascending-melodic-harmonic-definitions.json
data/exercises/: chords-root-position-exercises.json
minuetandroid/: CMakeLists.txt  README  README.packagers  build.sh  commands.txt  deploy.sh  sign.sh  template.csd  template_rhythm.csd  test1.csd
minuetandroid/android/: AndroidManifest.xml
minuetandroid/android/res/: sizes.txt
minuetandroid/data/: AndroidManifest.xml
minuetandroid/data/exercises/: rhythm-easy.json  rhythm-medium.json
minuetandroid/exercises/: CMakeLists.txt
minuetandroid/src/: CMakeLists.txt  csengine.cpp  csengine.h  csoundandroidsoundbackend.cpp  csoundandroidsoundbackend.h  exercisecontroller.cpp  exercisecontroller.h  iexercisecontroller.cpp  iexercisecontroller.h  iplugin.h  isoundbackend.cpp  isoundbackend.h  iuicontroller.h  main.cpp  main.qml  midisequencer.cpp  midisequencer.h  minuetinterfacesexport.h  resources.qrc  uicontroller.cpp  uicontroller.h
minuetandroid/src/qml/: ExerciseView.qml  RhythmAnswerView.qml  main.qml
minuetandroid/src/qml/pianoview/: BlackKey.qml  Octave.qml  PianoView.qml
src/app/: exercisecontroller.cpp  qml.qrc  uicontroller.cpp  uicontroller.h
src/app/plugins/: CMakeLists.txt  rect1.json  rect2.json  rect3.json
src/app/plugins/GuitarView/: FretBoard.qml  GuitarView.qml
src/app/plugins/PianoView/: PianoView.qml
src/app/plugins/rect1/: CMakeLists.txt  rect1.qml
src/app/plugins/rect2/: CMakeLists.txt  rect2.qml  students.qmlc
src/app/plugins/rect3/: CMakeLists.txt  rect3.qml  teachers.qmlc
src/app/qml/: ExerciseView.qml  Main.qml  MinuetMenu.qml
src/app/qml/InstrumentView/: InstrumentView.qml  InstrumentView.qml.autosave
src/plugins/csoundsoundcontroller/: csoundsoundcontroller.cpp
src/plugins/fluidsynthsoundcontroller/: fluidsynthsoundcontroller.cpp
